--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
     "react-icons": "^5.0.1",
     "react-multi-carousel": "^2.8.4",
     "react-router-dom": "^6.22.0",
-    "react-spinners": "^0.13.8"
+    "react-spinners": "^0.13.8",
+    "serve": "^14.2.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
